--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.5.2",
     "react-player": "^3.2.0",
     "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
