--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "inngest": "^3.40.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.17.0"
+    "mongoose": "^8.17.0",
+    "stripe": "^18.4.0",
+    "svix": "^1.71.0"
   },
   "name": "server",
   "version": "1.0.0",
