--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.17.0",
+    "nodemailer": "^7.0.5",
     "stripe": "^18.4.0",
     "svix": "^1.71.0"
   },
